--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
     "require": {
         "php": ">=5.2.0",
         "sergeytsalkov/meekrodb": "^2.3"
+    },
+    "autoload": {
+        "classmap": [
+            "libs"
+        ]
     }
 }
